fix dark mode pinning color

--- a/packages/frontend/src/styles/globals.css
+++ b/packages/frontend/src/styles/globals.css
@@ -123,7 +123,7 @@
   --scrollbar: #3f444c;
 
   --row-highlight: #9521bf66;
-  --row-highlight-no-opacity: #3c2742;
+  --row-highlight-no-opacity: #4B1D5F;
 
   /* Chart colors */
   --chart-ethereum: #3387ff;
